--- a/index.html
+++ b/index.html
@@ -1,39 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Delish Café</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-<style>
-* { margin:0; padding:0; box-sizing:border-box; }
-body { font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height:1.6; color:#3e2723; scroll-behavior:smooth; }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Delish Café</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <style>
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:#3e2723; scroll-behavior:smooth; }
+    #hero { height:100vh; position:relative; color:#fff; }
+    #hero h1, #hero p { text-shadow:2px 2px 6px rgba(0,0,0,0.5); }
+    .carousel-item img { height:100vh; object-fit:cover; }
+    .carousel-caption { bottom: 25%; }
+    .carousel-caption .btn { background:#ff7f50; color:white; }
+    .counter { font-size:2rem; font-weight:bold; color:#ff7f50; }
+    .menu-card img { transition:0.4s; border-radius:10px; }
+    .menu-card img:hover { transform:scale(1.1); }
+    #prank-text { display:none; color:#6f4e37; font-size:1.2rem; margin-top:20px; }
+  </style>
+</head>
+<body>
 
-/* Header */
-header { background:#6f4e37; color:#fff; padding:15px 20px; position:sticky; top:0; z-index:1000; display:flex; justify-content:space-between; align-items:center; }
-header .logo { font-size:1.5rem; font-weight:bold; }
-nav ul { list-style:none; display:flex; gap:25px; flex-wrap:wrap; }
-nav a { color:#fff; text-decoration:none; font-weight:bold; transition:0.3s; }
-nav a:hover { color:#ff7f50; }
-.menu-toggle { display:none; font-size:1.5rem; cursor:pointer; }
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background:#6f4e37;">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="#">Delish Café</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mainNav">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-3">
+        <li class="nav-item"><a class="nav-link" href="#hero">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="#newsletter">Newsletter</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-/* Sections */
-section { padding:80px 20px; text-align:center; opacity:0; transform:translateY(50px); transition:0.8s ease, transform 0.8s ease; }
-section.visible { opacity:1; transform:translateY(0); }
+<!-- Hero Section with Bootstrap Carousel -->
+<section id="hero">
+  <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <!-- Indicators -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2"></button>
+    </div>
+    <!-- Slides -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=1200&q=80" class="d-block w-100" alt="Coffee">
+        <div class="carousel-caption">
+          <h1 class="display-4 fw-bold">Welcome to Delish Café</h1>
+          <p class="lead">Experience the taste of perfection</p>
+          <a href="#menu" class="btn btn-lg">Explore Menu</a>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=1200&q=80" class="d-block w-100" alt="Cake">
+        <div class="carousel-caption">
+          <h1 class="display-4 fw-bold">Sweet Treats</h1>
+          <p class="lead">Delicious cakes made fresh daily</p>
+          <a href="#menu" class="btn btn-lg">See Menu</a>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&w=1200&q=80" class="d-block w-100" alt="Sandwich">
+        <div class="carousel-caption">
+          <h1 class="display-4 fw-bold">Tasty Sandwiches</h1>
+          <p class="lead">Perfect bites for your coffee break</p>
+          <a href="#menu" class="btn btn-lg">Order Now</a>
+        </div>
+      </div>
+    </div>
+    <!-- Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+</section>
 
-/* Hero */
-#hero { position:relative; height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; color:#fff; overflow:hidden; perspective:1px; perspective-origin:0 0; }
-.carousel img { width:100%; height:100vh; object-fit:cover; position:absolute; top:0; left:0; opacity:0; transition:opacity 1s ease-in-out, transform 1s ease-in-out; z-index:-1; transform:translateZ(-1px) scale(2); }
-.carousel img.active { opacity:1; transform:translateZ(0) scale(1); }
-#hero h1 { font-size:3rem; z-index:1; margin-bottom:20px; text-shadow:2px 2px 6px rgba(0,0,0,0.5); }
-#hero p { z-index:1; margin-bottom:20px; text-shadow:2px 2px 6px rgba(0,0,0,0.5);}
-#hero button { z-index:1; background:#ff7f50; color:#fff; border:none; padding:15px 30px; font-size:1rem; cursor:pointer; border-radius:5px; transition:0.3s; }
-#hero button:hover { background:#ffe5d9; }
+<!-- About -->
+<section id="about" class="py-5 bg-light text-center">
+  <div class="container">
+    <h2 class="mb-3">About Us</h2>
+    <p>Delish Café is dedicated to bringing you the finest coffee and gourmet treats in a cozy, welcoming atmosphere.</p>
+    <div class="row mt-4">
+      <div class="col-md-4"><div class="counter" data-target="5000">0</div><p>Visitors</p></div>
+      <div class="col-md-4"><div class="counter" data-target="120">0</div><p>Menu Items</p></div>
+      <div class="col-md-4"><div class="counter" data-target="25">0</div><p>Staff</p></div>
+    </div>
+  </div>
+</section>
 
-/* About */
-#about { background:#fff8f0; }
-#about h2 { margin-bottom:20px; color:#6f4e37; }
-.counters { display:flex; justify-content:center; gap:40px; margin-top:30px; flex-wrap:wrap; }
+<!-- Menu -->
+<section id="menu" class="py-5 text-center">
+  <div class="container">
+    <div class="mb-4">
+      <button class="btn btn-sm filter-btn active" style="background:#ff7f50; color:white;" data-filter="all">All</button>
+      <button class="btn btn-sm filter-btn" style="background:#ff7f50; color:white;" data-filter="coffee">Coffee</button>
+      <button class="btn btn-sm filter-btn" style="background:#ff7f50; color:white;" data-filter="cake">Cake</button>
+      <button class="btn btn-sm filter-btn" style="background:#ff7f50; color:white;" data-filter="sandwich">Sandwich</button>
+    </div>
+    <div class="row g-4">
+      <div class="col-md-3 menu-card" data-category="coffee">
+        <div class="card shadow-sm">
+          <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=400&q=80" class="card-img-top" alt="Cappuccino">
+          <div class="card-body">
+            <h5 class="card-title">Cappuccino</h5>
+            <p class="card-text">Rich espresso with frothy milk foam.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 menu-card" data-category="cake">
+        <div class="card shadow-sm">
+          <img src="https://images.unsplash.com/photo-1627308595229-7830a5c91f9f?auto=format&fit=crop&w=400&q=80" class="card-img-top" alt="Chocolate Cake">
+          <div class="card-body">
+            <h5 class="card-title">Chocolate Cake</h5>
+            <p class="card-text">Decadent and moist chocolate cake.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 menu-card" data-category="sandwich">
+        <div class="card shadow-sm">
+          <img src="https://th.bing.com/th/id/OIP.dXklaEouFOQHGeOxiTl8vgHaHa" class="card-img-top" alt="Club Sandwich">
+          <div class="card-body">
+            <h5 class="card-title">Club Sandwich</h5>
+            <p class="card-text">Fresh layers of veggies, cheese & chicken.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 menu-card" data-category="coffee">
+        <div class="card shadow-sm">
+          <img src="https://th.bing.com/th/id/OIP.tFkYqzaqstN6PiP-8vIMwwHaJQ" class="card-img-top" alt="Latte">
+          <div class="card-body">
+            <h5 class="card-title">Latte</h5>
+            <p class="card-text">Steamed milk with espresso for smooth taste.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="py-5 bg-light text-center">
+  <div class="container">
+    <h2 class="mb-4">Contact Us</h2>
+    <form class="mx-auto" style="max-width:500px;" onsubmit="submitForm(event)">
+      <input type="text" class="form-control mb-3" placeholder="Your Name" required>
+      <input type="email" class="form-control mb-3" placeholder="Your Email" required>
+      <textarea class="form-control mb-3" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn w-100" style="background:#ff7f50; color:white;">Send Message</button>
+    </form>
+  </div>
+</section>
+
+<!-- Newsletter -->
+<section id="newsletter" class="py-5 text-center bg-light">
+  <div class="container">
+    <h2 class="mb-3">Subscribe to Our Newsletter</h2>
+    <form class="d-flex justify-content-center flex-wrap gap-2" onsubmit="newsletterSubmit(event)">
+      <input type="email" class="form-control w-auto" placeholder="Enter your email" required>
+      <button class="btn" style="background:#ff7f50; color:white;">Subscribe</button>
+    </form>
+    <div class="d-flex justify-content-center gap-3 mt-3">
+      <a href="#"><i class="fab fa-facebook-f fs-4 text-warning"></i></a>
+      <a href="#"><i class="fab fa-instagram fs-4 text-warning"></i></a>
+      <a href="#"><i class="fab fa-twitter fs-4 text-warning"></i></a>
+      <a href="#"><i class="fab fa-pinterest-p fs-4 text-warning"></i></a>
+    </div>
+  </div>
+</section>
+
+<!-- Prank -->
+<section id="prank" class="py-5 text-center" style="background:#fff0f0;">
+  <h2>Surprise</h2>
+  <button onclick="showPrank()" class="btn mt-3" style="background:#ff7f50; color:white;">Click here!</button>
+  <p id="prank-text"></p>
+</section>
+
+<!-- Footer -->
+<footer class="bg-dark text-white py-3 text-center">
+  <p>&copy; 2025 Delish Café. All Rights Reserved.</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+function submitForm(e){ e.preventDefault(); alert("Thank you! Your message has been sent."); e.target.reset(); }
+function newsletterSubmit(e){ e.preventDefault(); alert("Subscribed successfully!"); e.target.reset(); }
+
+const counters=document.querySelectorAll('.counter');
+counters.forEach(counter=>{
+  counter.innerText='0';
+  const updateCounter=()=>{
+    const target=+counter.dataset.target;
+    const current=+counter.innerText;
+    const increment=target/200;
+    if(current<target){ counter.innerText=Math.ceil(current+increment); setTimeout(updateCounter,10); }
+    else{ counter.innerText=target; }
+  };
+  updateCounter();
+});
+
+const filterButtons=document.querySelectorAll('.filter-btn');
+const menuCards=document.querySelectorAll('.menu-card');
+filterButtons.forEach(btn=>{
+  btn.addEventListener('click', ()=>{
+    filterButtons.forEach(b=>b.classList.remove('active'));
+    btn.classList.add('active');
+    const filter=btn.dataset.filter;
+    menuCards.forEach(card=>{
+      card.style.display=(filter==='all'||card.dataset.category===filter)?'block':'none';
+    });
+  });
+});
+
+function showPrank(){
+  const prankText=document.getElementById('prank-text');
+  prankText.style.display='block'; prankText.innerText='';
+  const message="FUCK 😁💯YOU 😜 Enjoy your coffee instead!";
+  let i=0;
+  const typeWriter=setInterval(()=>{
+    prankText.innerText+=message[i]; i++;
+    if(i>=message.length){ clearInterval(typeWriter); setTimeout(()=>{ prankText.style.display='none'; },5000); }
+  },50);
+}
+</script>
+</body>
+</html>
 .counter { font-size:2rem; font-weight:bold; color:#ff7f50; }
 
 /* Menu */
@@ -277,3 +478,4 @@ function showPrank(){
 </script>
 </body>
 </html>
+
